--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^5.6.8
   firebase_auth: ^5.5.4
   firebase_database: ^11.3.6
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
